added first draft of introduciton

--- a/DSCI100-Final-Project.ipynb
+++ b/DSCI100-Final-Project.ipynb
@@ -5,7 +5,7 @@
    "id": "9f28cb1b-0bf1-4d60-bead-36cfb7c7039c",
    "metadata": {},
    "source": [
-    "# TITLE"
+    "# DSCI 100 FINAL PROJECT"
    ]
   },
   {
@@ -24,6 +24,27 @@
     "- provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your report\n",
     "- clearly state the question you tried to answer with your project\n",
     "- identify and fully describe the dataset that was used to answer the question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e21fbe-fd77-48a1-b5c1-bd944abfdb4f",
+   "metadata": {},
+   "source": [
+    "Video games. Of course we all know what it is. It is one of the major hobbies of people and a major activity of how they spend their free time and connect with other fellow gamers. With the invention of video games, it comes with a benefit for researchers and observers. They are now able to study with digital detailed records called game telemetry. Game telemetry records the data of the player themselves and what they do in the game, such as the duration of each play session and how they communicate to one another. This data is very useful for research because it shows real life behavior in a virtual setting instead of relying only on surveys or controlled lab studies.\n",
+    "\n",
+    "In this project, we analyze data from a research Minecraft server run by a computer science group at the University of British Columbia led by Professor Frank Wood. The server is designed for studying how people play games. Every time a player logs in, the server records information about their activity. This includes the times they start and end a session and the actions they take while playing. The research team uses these records to understand how different players behave, how long they stay active, and what kinds of activities they prefer.\n",
+    "\n",
+    "Running a server like this requires planning and resources. The research group needs to recruit enough players to gather meaningful data, but they also need to make sure the server can handle the number of active users. One tool they use to stay connected with players is a game related newsletter that players can choose to subscribe to. Understanding which players are more likely to subscribe can help the research group focus their recruitment efforts and manage server capacity more effectively.\n",
+    "\n",
+    "This leads to the broad question of the project: What player characteristics and behaviours are most predictive of subscribing to a game related newsletter, and how do these features differ between different types of players? The goal is to build a model that predicts whether a player will subscribe based on their activity on the server. After that, we can look at the most important features and see how they vary across different groups of players, such as casual players or highly active players.\n",
+    "\n",
+    "To answer this question, we use two related datasets called players.csv and sessions.csv. These two files work together to give a complete picture of player behaviour.\n",
+    "\n",
+    "The players.csv file has one row for each unique player in the study. It contains general information such as a player ID that has been anonymized. It also includes summary features that describe a player's overall activity. Most importantly, this file contains the variable subscribed_newsletter, which tells us whether the player subscribed. Other features in this file include total playtime, the number of sessions played, and counts of major actions such as blocks placed or items crafted. These summary features give us a broad idea of how engaged each player is.\n",
+    "\n",
+    "The sessions.csv file contains one row for every session a player completes. It includes the start time and end time of the session, the length of the session, and detailed counts of actions performed during that session. Since some players only log in once while others may play many times, this file shows the full range of player behaviour. It also lets us calculate new features such as the average session length for each player, how many days they were active, and how recently they last played.\n",
+    "Both datasets use the same player_id variable, which allows us to connect the two files. We can combine detailed session data with the summary information in players.csv to build a complete dataset for modelling. With these combined data, we can explore what behaviours are linked to newsletter subscription and how these behaviours vary between different player types. The goal is to help the research group better understand their players and make more informed decisions about recruitment and resource planning.\n"
    ]
   },
   {
@@ -964,7 +985,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.3.3"
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
