Draft of Wrangling and KNN completed (without description)

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,23 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c00960a-ec2c-40b5-8bd6-fe1d38f0b3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "",
+   "name": ""
+  },
+  "language_info": {
+   "name": ""
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
